--- a/details.html
+++ b/details.html
@@ -51,6 +51,8 @@
                 <li>This was made in Feature branch 01!</li>
                 <li>This change was made locally and pushed to GitHub at the branch level</li>
             </ol>
+	
+		<h1>This is my change! I think we need this</h1>
 	    <hr />
             <footer>
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
