New Feature from dev 2

--- a/details.html
+++ b/details.html
@@ -53,6 +53,8 @@
             </ol>
             <ol>
                 <li>Team flow started!</li>
+                <li>I think is better!</li>
+                <li>We have a mergetool!!!</li>
             </ol>
 		    <h1>This is my change! I think we need this</h1>
 
