--- a/details.html
+++ b/details.html
@@ -53,6 +53,7 @@
             </ol>
             <ol>
                 <li>Team flow started!</li>
+                <li>Added yet another feature from dev 1 workflow</li>
             </ol>
 		    <h1>This is my change! I think we need this</h1>
 
