--- a/details.html
+++ b/details.html
@@ -58,7 +58,7 @@
                 <li>We have a mergetool!!!</li>
             </ol>
 		    <h1>This is my change! I think we need this</h1>
-
+		<h2> Creating and solving a conflict at GitHub</h2>
 	    <hr />
             <footer>
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
