--- a/details.html
+++ b/details.html
@@ -59,6 +59,9 @@
             </ol>
 		    <h1>This is my change! I think we need this</h1>
 
+	    <ol>
+		    <li>A simple change made at GitHub!</li>
+		</ol>
 	    <hr />
             <footer>
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
