Started feature branch 1 on rebase demo

--- a/details.html
+++ b/details.html
@@ -66,6 +66,9 @@
 		      <li>A simple change made at GitHub!</li>
               <li>.....</li>
 		  </ol>
+          <ol>
+              <li>Starting the rebase developer 1</li>
+          </ol>
 	    <hr />
             <footer>
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
