Started feature branch 1 on rebase demo commit 2

--- a/details.html
+++ b/details.html
@@ -68,6 +68,7 @@
 		  </ol>
           <ol>
               <li>Starting the rebase developer 1</li>
+              <li>Commit 2 of the rebase for dev 1</li>
           </ol>
 	    <hr />
             <footer>
