--- a/details.html
+++ b/details.html
@@ -59,6 +59,7 @@
             </ol>
             <ol>
                 <li>This is the git ammend demo!</li>
+                <li>Try git reset hard example</li>
             </ol>
 		    <h1>This is my change! I think we need this</h1>
           <h2> Creating and solving a conflict at GitHub</h2>
