--- a/details.html
+++ b/details.html
@@ -37,6 +37,9 @@
                         <li><a href="About.html">About</a></li>
                         <li><a href="ContactUs.html">Contact Us</a></li>
                     </ul>
+                    <ol>
+                        <li>test</li>
+                    </ol>
                 </div>
             </div>
         </div>
