Adding the info file and making small changes

--- a/details.html
+++ b/details.html
@@ -57,6 +57,9 @@
                 <li>I think is better!</li>
                 <li>We have a mergetool!!!</li>
             </ol>
+            <ol>
+                <li>This is the git amend demo!</li>
+            </ol>
 		    <h1>This is my change! I think we need this</h1>
           <h2> Creating and solving a conflict at GitHub</h2>
 	      <ol>
