--- a/details.html
+++ b/details.html
@@ -32,6 +32,10 @@
                                 <li class="menu-item"><a href="index.html">Home</a></li>
                                 <li class="menu-item"><a href="details.html">Another Page</a></li>
                             </ul>
+                            <ul class="dropdown-menu2">
+                                <li class="menu-item"><a href="index2.html">Home</a></li>
+                                <li class="menu-item"><a href="details2.html">Another Page</a></li>
+                            </ul>
                         </li>
                         <li><a href="Portfolio.html">Portfolio</a></li>
                         <li><a href="About.html">About</a></li>
