--- a/About.html
+++ b/About.html
@@ -23,6 +23,9 @@
                     <a href="http://www.majorguidancesolutions.com" class="navbar-brand">
                         <img src="http://lorempixel.com/150/30/" title="Your company Logo" alt="A company Logo" height="30px"/>
                     </a>
+                    <a href="http://www.majorguidancesolutions.com" class="navbar-brand">
+                        <img src="http://lorempixel.com/150/30/" title="Your company Logo" alt="A company Logo" height="30px"/>
+                    </a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -103,6 +106,9 @@
             </div>
             <hr />
             <footer>
+                <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
+            </footer>
+        <footer>
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
             </footer>
         </div>
