Started Feature branch 1 on rebase demo

--- a/details.html
+++ b/details.html
@@ -56,6 +56,9 @@
                 <li>This change was made locally and pushed to GitHub at the branch level</li>
             </ol>
             <ol>
+                <li>SStarting rebase dev1</li>
+            </ol>
+            <ol>
                 <li>Team flow started!</li>
                 <li>Added yet another feature from dev 1 workflow</li>
                 <li>I think is better!</li>
