Started Feature branch 1 on rebase demo commit 2

--- a/details.html
+++ b/details.html
@@ -48,6 +48,8 @@
             
             <h1> Details Page with more content... </h1>
             <h2> Git Is Awesome and I'm learning so much cool stuff! </h2>
+            <h1> Details Page with more content... </h1>
+            <h2> Git Is Awesome and I'm learning so much cool stuff! </h2>
 	        <h3> Multiple changes are coming </h3>
 	        <h4> Yet another change </h4>
             <ol>
