--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
             </footer>
         </div>
-
+aaa
         <!-- Scripts -->
         <!--<script src="js/lib/jquery-3.2.1.min.js" type="text/javascript"></script>-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
