--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ ggfsdgfd
         <!-- Scripts -->
         <!--<script src="js/lib/jquery-3.2.1.min.js" type="text/javascript"></script>-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <!--<script src="js/lib/bootstrap.min.js" type="text/javascript"></script>-->
+        <script src="js/lib/bootstrap.min.js" type="text/javascript"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
