--- a/details.html
+++ b/details.html
@@ -59,6 +59,10 @@
             </ol>
             <ol>
                 <li>This is the git ammend demo222!</li>
+                <li>This is the git ammend demo333!</li>
+                <li>This is the git ammend demo444!</li>
+                <li>This is the git ammend demo222!</li>
+                <li>This is the git ammend demo222!</li>
             </ol>
 		    <h1>This is my change! I think we need this</h1>
           <h2> Creating and solving a conflict at GitHub</h2>
