--- a/details.html
+++ b/details.html
@@ -59,6 +59,7 @@
             </ol>
             <ol>
                 <li>This is Git Amend Demo</li>
+                <li>This is Git Amend Demo2</li>
             </ol>
             <ol>
                 <li>This is the git ammend demo!</li>
