--- a/About.html
+++ b/About.html
@@ -88,7 +88,7 @@
                                 intelligentsia. Seitan williamsburg cloud bread chicharrones irure af fam.
                             </p>
                             <p>
-                                Adaptogen aesthetic VHS blog williamsburg, lumbersexual fingerstache cloud bread laboris flannel before they sold out banjo pok pok tbh schlitz. 
+                                Adaptogen aesthetic VHHS blog williamsburg, lumbersexual fingerstache cloud bread laboris flannel before they sold out banjo pok pok tbh schlitz. 
                                 Elit anim selfies officia tumblr. Pop-up bitters portland butcher waistcoat blue bottle. Cloud bread flexitarian squid vinyl eiusmod pickled cold-pressed. 
                                 Church-key subway tile XOXO unicorn, microdosing waistcoat YOLO ex truffaut single-origin coffee poutine. Retro culpa heirloom 90's. 
                                 Blog church-key health goth, before they sold out cupidatat farm-to-table tempor coloring book gastropub bitters four dollar toast echo park. 
