Adding info file and making small changes

--- a/details.html
+++ b/details.html
@@ -58,6 +58,9 @@
                 <li>We have a mergetool!!!</li>
             </ol>
             <ol>
+                <li>This is the git ammend demo! </li>
+            </ol>
+            <ol>
                 <li>This is the git ammend demo!</li>
             </ol>
 		    <h1>This is my change! I think we need this</h1>
