Added a new file to the previous commit

--- a/details.html
+++ b/details.html
@@ -70,6 +70,9 @@
               <li>Starting the rebase developer 1</li>
               <li>Commit 2 of the rebase for dev 1</li>
           </ol>
+          <ol>
+            <li>This is our git ammend demo</li>
+          </ol>
 	    <hr />
             <footer>
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
