Made another change on details.html

--- a/details.html
+++ b/details.html
@@ -72,6 +72,7 @@
           </ol>
           <ol>
             <li>Starting the rebase</li>
+            <li>Commit 2 of the rebase for Dev1</li>
           </ol>
 	    <hr />
             <footer>
